[tool.poetry]
name = "hypothesis-for-merging"
version = "0.1.0"
description = ""
authors = ["Isabell Kiral <isabell.kiral@cultureamp.com>"]

[tool.poetry.dependencies]
python = "^3.9"
hypothesis = "^6.31.6"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
